@@ -32,10 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
-    <Reference Include="Tao.FreeGlut, Version=2.4.0.1, Culture=neutral, PublicKeyToken=6e602a6ad6c0d06d">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\Tao.FreeGlut.dll</HintPath>
-    </Reference>
     <Reference Include="Tao.OpenGl, Version=2.1.0.4, Culture=neutral, PublicKeyToken=1ca010269a4501ef">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\Tao.OpenGl.dll</HintPath>
@@ -49,9 +45,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="lib\Tao.FreeGlut.dll" />
-    <None Include="lib\Tao.FreeGlut.dll.config" />
-    <None Include="lib\Tao.FreeGlut.xml" />
     <None Include="lib\Tao.OpenGl.dll" />
     <None Include="lib\Tao.OpenGl.dll.config" />
     <None Include="lib\Tao.OpenGl.xml" />
