@@ -33,13 +33,13 @@
       <HintPath>lib\NDesk.Options.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
-    <Reference Include="Tao.FreeGlut, Version=2.4.0.1, Culture=neutral, PublicKeyToken=6e602a6ad6c0d06d">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Cumberland.Drawing.OpenGL\lib\Tao.FreeGlut.dll</HintPath>
-    </Reference>
     <Reference Include="Tao.OpenGl, Version=2.1.0.4, Culture=neutral, PublicKeyToken=1ca010269a4501ef">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Cumberland.Drawing.OpenGL\lib\Tao.OpenGl.dll</HintPath>
+    </Reference>
+    <Reference Include="Tao.FreeGlut, Version=2.4.0.1, Culture=neutral, PublicKeyToken=6e602a6ad6c0d06d">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\Tao.FreeGlut.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -64,5 +64,8 @@
   <ItemGroup>
     <None Include="lib\NDesk.Options.dll" />
     <None Include="lib\NDesk,Options.COPYING" />
+    <None Include="lib\Tao.FreeGlut.dll" />
+    <None Include="lib\Tao.FreeGlut.dll.config" />
+    <None Include="lib\Tao.FreeGlut.xml" />
   </ItemGroup>
 </Project>
